# swing

./: .env  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: gunicorn.py  ngrok.yml  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  howto.rst  index.rst
locale/en_US/LC_MESSAGES/: django.po
locale/zh_HAns/LC_MESSAGES/: django.po
requirements/: base.txt
swing/: .gitignore  CONTRIBUTORS.txt  conftest.py  docker-compose.docs.yml  manage.py  pyproject.toml
swing/beads_string/: apps.py
swing/config/: urls.py  wsgi.py
swing/config/settings/: local.py  production.py
swing/docs/: conf.py  make.bat  users.rst
swing/jewelries/: admin.py  apps.py
swing/jewelries/migrations/: 0001_initial.py  0002_alter_hardware_material.py  0003_rename_string_linkjewelryjewelrystring_jewelry_string_and_more.py  0004_rename_size_hardware_length_hardware_width_and_more.py  0005_alter_bead_options_alter_beadmaterial_options_and_more.py  0006_alter_hardware_options_and_more.py  0007_alter_jewelrystring_options_and_more.py  0008_alter_jewelry_options_alter_linkjewelrybead_options_and_more.py  0009_alter_jewelrystring_options.py  0010_alter_series_options.py
swing/jewelries/models/: bead.py  hardware.py  jewelry.py  jewelry_string.py
swing/jewelry/: admin.py  apps.py  forms.py
swing/jewelry/migrations/: 0001_initial.py  0002_beadshapeattribute_bead_shape_attribute.py  0003_alter_beadshape_options_remove_bead_shape_attribute_and_more.py  0004_alter_linkjewelryjewelrystring_unique_together.py  0005_alter_bead_purchase_link_and_more.py  0006_alter_bead_purchase_link_and_more.py  0007_jewelry_price.py  0008_jewelry_length.py  0009_jewelry_title_alter_jewelry_length.py  0010_jewelry_introduction.py  0011_jewelry_inspiration_alter_jewelry_introduction.py  0012_alter_jewelry_inspiration_alter_jewelry_introduction.py  0013_remove_jewelry_serious_jewelry_series.py  0014_alter_jewelry_series.py
swing/jewelry/models/: bead.py  color.py  hardware.py  jewelry.py  jewelry_string.py
swing/locale/fr_FR/LC_MESSAGES/: django.po
swing/locale/pt_BR/LC_MESSAGES/: django.po
swing/package/: admin.py  apps.py
swing/package/migrations/: 0001_initial.py  0002_alter_package_purchase_link.py
swing/package/models/: package.py
swing/static/css/: product_image.css
swing/static/js/: product_image.js
swing/swing/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
swing/swing/templates/: base.html
swing/swing/users/: apps.py  views.py
swing/swing/users/tests/: test_admin.py  test_forms.py  test_managers.py  test_views.py
swing/templates/: base.html
swing/templates/jewelry/: product_image.html
swing/users/: adapters.py  models.py  views.py
swing/users/migrations/: 0001_initial.py
swing/users/tests/: factories.py  test_models.py  test_urls.py
