[tool.poetry]
name = "swing"
version = "0.1.0"
description = ""
authors = ["Aiden Huang <ahuang9688@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-slugify = "8.0.4"  # https://github.com/un33k/python-slugify
Pillow = "10.3.0"  # https://github.com/python-pillow/Pillow
argon2-cffi = "23.1.0"  # https://github.com/hynek/argon2_cffi
redis = "5.0.6"  # https://github.com/redis/redis-py
hiredis = "2.3.2"  # https://github.com/redis/hiredis-py
gunicorn = "22.0.0"  # https://github.com/benoitc/gunicorn
psycopg = "3.1.19"  # https://github.com/psycopg/psycopg
Collectfast = "2.2.0"  # https://github.com/antonagestam/collectfast

# Django
# ------------------------------------------------------------------------------
django = "4.2.13"  # pyup: < 5.0  # https://www.djangoproject.com/
django-environ = "0.11.2"  # https://github.com/joke2k/django-environ
django-model-utils = "4.5.1"  # https://github.com/jazzband/django-model-utils
django-allauth = "0.63.3"  # https://github.com/pennersr/django-allauth
django-crispy-forms = "2.2"  # https://github.com/django-crispy-forms/django-crispy-forms
crispy-bootstrap5 = "2024.2"  # https://github.com/django-crispy-forms/crispy-bootstrap5
django-redis = "5.4.0"  # https://github.com/jazzband/django-redis
django-storages = "1.14.3"  # https://github.com/jschneier/django-storages
django-anymail = "10.3"  # https://github.com/anymail/django-anymail

[tool.poetry.group.dev.dependencies]
Werkzeug = "3.0.3" # https://github.com/pallets/werkzeug
ipdb = "0.13.13"  # https://github.com/gotcha/ipdb

# Testing
# ------------------------------------------------------------------------------
mypy = "1.10.0"  # https://github.com/python/mypy
django-stubs = "5.0.2"  # https://github.com/typeddjango/django-stubs
pytest = "8.2.2"  # https://github.com/pytest-dev/pytest
pytest-sugar = "1.0.0"  # https://github.com/Frozenball/pytest-sugar

# Documentation
# ------------------------------------------------------------------------------
sphinx = "7.3.7"  # https://github.com/sphinx-doc/sphinx
sphinx-autobuild = "2024.4.16" # https://github.com/GaretJax/sphinx-autobuild

# Code quality
# ------------------------------------------------------------------------------
ruff = "0.4.9"  # https://github.com/astral-sh/ruff
coverage = "7.5.3"  # https://github.com/nedbat/coveragepy
djlint = "1.34.1"  # https://github.com/Riverside-Healthcare/djLint
pre-commit = "3.7.1"  # https://github.com/pre-commit/pre-commit

# Django
# ------------------------------------------------------------------------------
factory-boy = "3.3.0"  # https://github.com/FactoryBoy/factory_boy

django-debug-toolbar = "4.4.2"  # https://github.com/jazzband/django-debug-toolbar
django-extensions = "3.2.3"  # https://github.com/django-extensions/django-extensions
django-coverage-plugin = "3.1.0"  # https://github.com/nedbat/django_coverage_plugin
pytest-django = "4.8.0"  # https://github.com/pytest-dev/pytest-django

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["swing/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*.py",
    "staticfiles/*"
]
# Same as Django: https://github.com/cookiecutter/cookiecutter-django/issues/4792.
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF"
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038" # Checks for uses of isinstance/issubclass that take a tuple 
          # of types for comparison.
          # Deactivated because it can make the code slow: 
          # https://github.com/astral-sh/ruff/issues/7871
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# The fixes in extend-unsafe-fixes will require 
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
